# plugin-pretix-eupago

./: CONFIGURATION_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  NEW_PAYMENT_METHODS.md  PAYMENT_FAILURE_FIX.md  README.md  SEPARACAO_PAYBYLINK.md  TESTE_RESOLUCOES.md  TESTING_GUIDE.md  WEBHOOK_IMPLEMENTATION.md  check_payments.py  check_webhook_secret.py  compile_translations.py  create_minimal_mo.py  install.sh  mb_settings_temp.py  pyproject.toml  requirements.txt  setup.py  setup_webhook_secret.sh  test_decryption.py  test_signature.py  test_signature_hex.py  update_version.ps1  update_version.sh
.github/workflows/: python-publish.yml
data/: .secret
eupago/: __init__.py  apps.py  config.py  payment.py  settings.py  signals.py  urls.py  views.py
eupago/locale/en/LC_MESSAGES/: django.po
eupago/locale/pt/LC_MESSAGES/: django.po
eupago/management/commands/: check_eupago_payments.py  confirm_eupago_payments.py  confirm_payments.py  migrate_eupago_settings.py  sync_eupago_payments.py
eupago/migrations/: __init__.py
eupago/scripts/: update_version.py
eupago/static/eupago_v2/: eupago_v2.css  eupago_v2.js
eupago/static/pretixplugins/eupago_v2/: mbway_timer.scss
eupago/templates/pretixplugins/eupago/: checkout_multibanco_confirm.html  checkout_payment_confirm_mb_creditcard.html  checkout_payment_confirm_mbway_new.html  checkout_payment_confirm_paybylink.html  checkout_payment_form_cc.html  (+2 more)
pretix_eupago.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_payment.py
(+17 files in other folders)
