# Configuração do sistema de build para o plugin EuPago para Pretix
# Este arquivo substitui o setup.py tradicional com a abordagem moderna usando pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-pretix-eupago"
version = "1.0.0"
description = "Fornecedor de Pagamentos EuPago para pretix"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [{ name = "Jorge Gomes", email = "jorge.gomes211@gmail.com" }]
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
  "pretix>=2.7.0",
  "requests>=2.20.0",
  "django>=3.2"
]

[project.urls]
Homepage = "https://github.com/jgomes-03/plugin-pretix-eupago"
Issues = "https://github.com/jgomes-03/plugin-pretix-eupago/issues"

# entry-point obrigatório para o pretix detetar o plugin
[project.entry-points."pretix.plugin"]
eupago = "eupago:PluginApp.PretixPluginMeta"

[tool.setuptools]
include-package-data = true

# inclui estáticos/templates/locale do plugin
[tool.setuptools.package-data]
eupago = ["static/**/*", "templates/**/*", "locale/**/*", "migrations/**/*"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
